clusters/managed/devbench/sonarqube/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app sonarqube
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://sonarqube.trusted.nirmalhk7.com"
    gethomepage.dev/group: Devbench
    gethomepage.dev/description: "Quality gates"
    gethomepage.dev/icon: *app
    gethomepage.dev/app: *app # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Sonarqube
    gethomepage.dev/weight: "40"
    gethomepage.dev/pod-selector: "app=sonarqube"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`sonarqube.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: sonarqube-sonarqube
          port: 9000
      middlewares:
        # - name: mgd-https
        - name: mgd-headervalidation
